[package]
name = "job_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", optional = true, default-features = false}
cron = { version = "0.12.0", optional = true }
tracing = "0.1.37"

[features]
# default = ["cron"]
cron = ["dep:cron", "chrono"]
